# POPA

./: .gitignore  Makefile  README.md  pyproject.toml
birdbench/: .gitignore  readme.md  run_experiment.py  setup.sh
examples/: 01_hello.py  02_fastapi.py  03_db_tool.py  04_chatgpt.py  05_gemini.py  Dockerfile  fastapi_agent.py  hello_agent.py
src/popa/: __init__.py  agent.py  agent_config.py  builder.py  chat_history.py  claude_adapter.py  cot_logic.py  message.py  response_parser.py  tool.py  verifier_exception.py
src/popa/llm_adapter/: anthropic.py  builder.py  gemini.py  interface.py  local_disk_cache.py  openai.py
tests/: run_stuff.py  test_adaptors_end_to_end.py  test_agent.py  test_claud_adapter.py  test_gemini_adapter.py  test_openai_adapter.py
